--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "eslint.workingDirectories": [
       "./client",
       "./hardhat"
-  ]
+  ],
+  "solidity.packageDefaultDependenciesContractsDirectory": "",
+  "solidity.packageDefaultDependenciesDirectory": "hardhat/node_modules"
 }
